name:                Hangman
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              James Hageman
maintainer:          jamesd@hageman.ca
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10
executable Hangman
  main-is:             Main.hs
  build-depends:
    base >=4.9 && <4.10,
    containers == 0.5.7.1,
    MissingH == 1.4.0.1,
    split == 0.2.3.2
  default-language:    Haskell2010
